--- a/index.html
+++ b/index.html
@@ -1,1 +1,130 @@
 
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>DSRT – Digital Smart Remaster Technology</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #0e0e0e;
+      color: #ffffff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    header {
+      width: 100%;
+      padding: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: #1a1a1a;
+      border-bottom: 1px solid #333;
+    }
+    .logo-title {
+      display: flex;
+      flex-direction: column;
+    }
+    .logo-title h1 {
+      margin: 0;
+      font-size: 1.2rem;
+      font-weight: bold;
+      color: #f0c040;
+    }
+    .logo-title span {
+      font-size: 0.85rem;
+      color: #aaa;
+    }
+    .login-btn {
+      background: #f0c040;
+      color: #000;
+      padding: 8px 16px;
+      border-radius: 6px;
+      font-weight: bold;
+      text-decoration: none;
+    }
+    .hero {
+      text-align: center;
+      margin: 40px 20px 20px;
+      font-size: 1.1rem;
+      color: #ddd;
+    }
+    .cta {
+      background: #222;
+      padding: 20px;
+      text-align: center;
+      font-size: 1.1rem;
+      font-weight: bold;
+      color: #f0c040;
+      margin: 20px 0;
+      border-top: 1px solid #333;
+      border-bottom: 1px solid #333;
+    }
+    .section-title {
+      margin: 40px 0 10px;
+      font-size: 1.2rem;
+      text-align: center;
+      color: #f0c040;
+    }
+    .features {
+      width: 90%;
+      max-width: 800px;
+      margin: 0 auto;
+      border-top: 1px solid #333;
+      padding-top: 10px;
+    }
+    .footer {
+      margin-top: 40px;
+      padding: 20px;
+      font-size: 0.9rem;
+      color: #aaa;
+      border-top: 1px solid #333;
+      text-align: center;
+      width: 100%;
+      background: #1a1a1a;
+    }
+    .footer a {
+      color: #f0c040;
+      text-decoration: none;
+      margin: 0 10px;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <div class="logo-title">
+      <h1>DSRT</h1>
+      <span>Digital Smart Remaster Technology</span>
+    </div>
+    <a href="#" class="login-btn">Login</a>
+  </header>
+
+  <div class="hero">
+    Studio kreatif untuk desain visual & restorasi digital
+  </div>
+
+  <div class="cta">
+    [ UJI COBA GRATIS • GRATIS 100% ]
+  </div>
+
+  <div class="section-title">✦ SISTEM DSRT ✦</div>
+
+  <div class="features">
+    <p style="text-align:center;">✔️ Restore Otomatis</p>
+    <p style="text-align:center;">✔️ One Tap Remaster</p>
+    <p style="text-align:center;">✔️ Manual & AI Fix Tools</p>
+    <p style="text-align:center;">✔️ Kompatibel Mobile/Desktop</p>
+  </div>
+
+  <div class="footer">
+    <a href="#">Tentang Kami</a> |
+    <a href="#">WhatsApp Admin</a> |
+    © DSRT 2025
+  </div>
+
+</body>
+</html>
