--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
     <a href="/register.html">🚀 Coba Sekarang Gratis</a>
   </div>  <div class="section-title">Galeri Sebelum & Sesudah</div>
   <div class="gallery">
-    <img src="https://via.placeholder.com/300x200?text=Sebelum+1" alt="before">
-    <img src="https://via.placeholder.com/300x200?text=Sesudah+1" alt="after">
-    <img src="https://via.placeholder.com/300x200?text=Sebelum+2" alt="before">
-    <img src="https://via.placeholder.com/300x200?text=Sesudah+2" alt="after">
-    <img src="https://via.placeholder.com/300x200?text=Sebelum+3" alt="before">
-    <img src="https://via.placeholder.com/300x200?text=Sesudah+3" alt="after">
+    <img src="https://images.unsplash.com/photo-1504198266285-1653c22a0a9b" alt="before">
+    <img src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d" alt="after">
+    <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde" alt="before">
+    <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e" alt="after">
+    <img src="https://images.unsplash.com/photo-1552058544-f2b08422138a" alt="before">
+    <img src="https://images.unsplash.com/photo-1603415526960-f7e0328b43c9" alt="after">
   </div>  <div class="section-title">Fitur Utama DSRT</div>
   <div class="features">
     <div class="feature-box">
